made the js script for the binary game more readable. made the output message change colors from green to red depending on the validity of user output, fixd issue of user pressing enter and losing a life on the home screen of game.

--- a/navigation/BinaryLearningGame/BinaryLearningGameCSS.css
+++ b/navigation/BinaryLearningGame/BinaryLearningGameCSS.css
@@ -135,7 +135,7 @@ button:active {
 
 .message {
     font-size: 1.2rem;
-    color: var(--hard);
+    color: red;
     font-weight: bold;
 }
 
